--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
-    "@fontsource/lato": "^5.0.21",
-    "@fontsource/montserrat": "^5.0.18",
+    "@emailjs/browser": "^4.3.3",
     "astro": "^4.9.1",
     "sass": "^1.77.2",
     "tailwindcss": "^3.4.3",
